objects/Supporting_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any Local Business Day</fullName>
                </value>
                <value>
                    <fullName>Every Specified Week Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valuation_Time__c</fullName>
        <label>Valuation Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COB: Local Business Day Preceding the Valuation Date</fullName>
                </value>
                <value>
                    <fullName>COB: Location of Valuation Agent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valuation__c</fullName>
        <label>Valuation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weekday_that_Constitutes_Valuation_Date__c</fullName>
        <label>Weekday that Constitutes Valuation Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supporting Agreement</label>
    <nameField>
        <displayFormat>SA-{0}</displayFormat>
        <label>Supporting Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporting Agreements</pluralLabel>
    <recordTypes>
        <fullName>CSA_Supporting_Agreement</fullName>
        <active>true</active>
        <label>CSA Supporting Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSD_Supporting_Agreement</fullName>
        <active>true</active>
        <label>CSD Supporting Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_Supporting_Agreement</fullName>
        <active>true</active>
        <label>Default Supporting Agreement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LIBRA_CSA_Bank_Collateral_Thresh_Amount</fullName>
        <active>true</active>
        <description>Validation to prompt user to complete the Bank Collateral Threshold Amount field when &quot;Specified Amount&quot; is selected on the Bank Collateral Threshold Amount Type field</description>
        <errorConditionFormula>AND(ISPICKVAL( Bank_Collateral_Threshold_Amount_Type__c , &quot;Specified Amount&quot;), ISBLANK( Bank_Collateral_Threshold_Fixed_Amount__c ))</errorConditionFormula>
        <errorMessage>Please specify the amount on the Bank Collateral Threshold Amount  field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_CSA_Bank_Independent_Amount</fullName>
        <active>true</active>
        <description>Validation to prompt user to complete the Bank Independent Amount field when &quot;Specified Amount&quot; is selected on the Bank Independent Amount Type field</description>
        <errorConditionFormula>AND(ISPICKVAL(Bank_Independent_Amount_Type__c, &quot;Specified Amount&quot;), ISBLANK(Bank_Independent_Amount_Initial_Margin__c))</errorConditionFormula>
        <errorMessage>Please specify the amount on the Bank Independent Amount Initial Margin field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_CSA_Bank_Minimum_Transfer_Amount</fullName>
        <active>true</active>
        <description>Validation to prompt user to complete the Bank Minimum Transfer Amount field when &quot;Specified Amount&quot; is selected on the Collateral Independent Amount Type field</description>
        <errorConditionFormula>AND(ISPICKVAL(Bank_Minimum_Transfer_Amount_Type__c , &quot;Specified Amount&quot;), ISBLANK(Bank_Min_Transfer_Fixed_Amount__c ))</errorConditionFormula>
        <errorMessage>Please specify the amount on the Bank Minimum Transfer Amount field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_CSA_CP_Collateral_Thresh_Amount</fullName>
        <active>true</active>
        <description>Validation to prompt user to complete the Counterparty Collateral Threshold Amount field when &quot;Specified Amount&quot; is selected on the Counterparty Collateral Threshold Amount Type field</description>
        <errorConditionFormula>AND(ISPICKVAL(Counterparty_Collateral_T_Amount_Type__c , &quot;Specified Amount&quot;), ISBLANK( Counterparty_Collateral_Threshold_Amount__c ))</errorConditionFormula>
        <errorMessage>Please specify the amount on the Counterparty Collateral Threshold Amount  field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_CSA_CP_Independent_Amount</fullName>
        <active>true</active>
        <description>Validation to prompt user to complete the Collateral Independent Amount field when &quot;Specified Amount&quot; is selected on the Collateral Independent Amount Type field</description>
        <errorConditionFormula>AND(ISPICKVAL(Counterparty_Independent_Amount_Type__c , &quot;Specified Amount&quot;), ISBLANK( Counterparty_Independent_Amount__c))</errorConditionFormula>
        <errorMessage>Please specify the amount on the Counterparty Independent Amount Initial Margin field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_CSA_CP_Minimum_Transfer_Amount</fullName>
        <active>true</active>
        <description>Validation to prompt user to complete the Counterparty Minimum Transfer Amount field when &quot;Specified Amount&quot; is selected on the Collateral Independent Amount Type field</description>
        <errorConditionFormula>AND(ISPICKVAL(Counterparty_Min_Transfer_Amount_Type__c , &quot;Specified Amount&quot;), ISBLANK(Counterparty_Min_Transfer_Fixed_Amount__c ))</errorConditionFormula>
        <errorMessage>Please specify the amount on the Counterparty Minimum Transfer Fixed Amount field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_SA_Type_Other_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Supporting_Agreement_Type__c, &quot;Other&quot;), ISBLANK(Other_Agreement__c))</errorConditionFormula>
        <errorMessage>Please complete the Other Agreement Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Select_Weekday_Valudation_Date</fullName>
        <active>true</active>
        <description>Validation to prompt user to the day of the week that will constitute a valuation date.</description>
        <errorConditionFormula>AND(ISPICKVAL(Valuation_Date__c , &quot;Every Specified Week Day&quot;), ISBLANK(TEXT(Weekday_that_Constitutes_Valuation_Date__c )))</errorConditionFormula>
        <errorMessage>Please specify the day of the week that will constitute a valuation date</errorMessage>
    </validationRules>
</CustomObject>